<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBlack"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/view_calculate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:hint="@string/zero"
            android:textSize="25sp"
            android:textColor="@color/colorSnow">

        </TextView>
        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:hint="@string/zero"
            android:textSize="20sp"
            android:textColor="@color/colorSnow">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ca"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/plus_minus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/plus_minus" />

            <Button
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/precent" />

            <Button
                android:id="@+id/division"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/division" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/three" />
            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/multiply" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/six" />
            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/minus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nine" />
            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:gravity="center"
                android:text="@string/plus" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:layout_weight="1"
                android:id="@+id/switch_first"
                android:text="@string/switch_first"
                android:gravity="center">
            </Button>

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero"
                android:textSize="25sp">
            </Button>

            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:id="@+id/point"
                android:layout_weight="1"
                android:text="@string/point"
                android:gravity="center">
            </Button>
            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:textSize="25sp"
                android:id="@+id/equal"
                android:layout_weight="1"
                android:text="@string/equal"
                android:gravity="center">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/image_view">

        </ImageView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
           <EditText
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:id="@+id/edit_text"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btn_ok"
                android:text="@string/ok"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/switchSecond"
                android:text="@string/switch_first"/>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>
